tdf#143852: Revert "Move ActionLockGuard up a bit"

This reverts commit b791974837a99ead793b4ead6760b2f4e5237de2.

Change-Id: I4bb95c915aa27b509ea2a41602ba2198c2f20cea
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/120370
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>